Fixed bug issue #5 AC-157 + z-index for cookie disclaimer

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -551,6 +551,7 @@ footer {
     position: fixed;
     text-align: center;
     width: 100%;
+    z-index: 1001;
 }
 
 
